@@ -1,4 +1,4 @@
 package refmeister.controllers;
 
-public abstract class Controller {
+public interface Controller {
 }
